--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Android File Transfer</string>
-    <string name="enable_button">Enable</string>
+    <string name="enable_button">Select</string>
     <string name="discover_button">Discover</string>
+    <string name="reset_button">Reset</string>
 </resources>
